rust_final_check.txt
   Compiling cosyvoice-native-server v0.1.0 (/home/grant/github/CosyVoice-1/rust/native-server)
warning: function `normalize_punctuation` is never used
   --> native-server/src/text_frontend.rs:125:4
    |
125 | fn normalize_punctuation(text: &str) -> String {
    |    ^^^^^^^^^^^^^^^^^^^^^
    |
    = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: fields `center` and `device` are never read
   --> native-server/src/utils.rs:123:5
    |
119 | pub struct InverseStftModule {
    |            ----------------- fields in this struct
...
123 |     center: bool,
    |     ^^^^^^
124 |     device: Device,
    |     ^^^^^^

warning: `cosyvoice-native-server` (lib) generated 2 warnings
error[E0308]: mismatched types
   --> native-server/src/bin/test_llm_parity.rs:135:12
    |
135 |     if let Ok(py_lm_input) = tensors.get("lm_input") {
    |            ^^^^^^^^^^^^^^^   ----------------------- this expression has type `Option<&candle_core::Tensor>`
    |            |
    |            expected `Option<&Tensor>`, found `Result<_, _>`
    |
    = note: expected enum `Option<&candle_core::Tensor>`
               found enum `Result<_, _>`

For more information about this error, try `rustc --explain E0308`.
error: could not compile `cosyvoice-native-server` (bin "test_llm_parity") due to 1 previous error
